--- a/VB.Jet Fighter/VB.Jet Fighter/VB.Jet Fighter.vbproj
+++ b/VB.Jet Fighter/VB.Jet Fighter/VB.Jet Fighter.vbproj
@@ -102,9 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -120,10 +120,19 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\image-20161110-21844-w84scr %282%29.jpg" />
+    <None Include="Resources\jet.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\jet.png" />
+    <None Include="Resources\background.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\missile.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\missile2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\missile3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
